--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,28 @@
 {
-    "name": "bshaffer/oauth2-server-bundle",
+    "name": "binhvd/oauth2-server-bundle",
     "type": "symfony-bundle",
     "description": "Symfony OAuth2ServerBundle",
     "keywords": ["oauth", "oauth2", "security"],
-    "homepage": "http://github.com/bshaffer/oauth2-server-bundle",
+    "homepage": "https://github.com/binhvd/oauth2-server-bundle",
     "license": "MIT",
     "authors": [
         {
             "name": "Brent Shaffer",
             "email": "bshafs@gmail.com"
+        },
+		{
+            "name": "Binh Vu",
+            "email": "bvu@ftk.de"
         }
     ],
     "minimum-stability":"dev",
     "require": {
         "php": ">=5.3",
-        "bshaffer/oauth2-server-php": ">=1.0",
+        "binhvd/oauth2-server-php": ">=1.0",
         "bshaffer/oauth2-server-httpfoundation-bridge": "^1.2"
     },
     "require-dev": {
-        "symfony/symfony": "^2.8|^3",
+        "symfony/symfony": ">=3",
         "doctrine/orm": "~2.4,>=2.4.5"
     },
     "autoload": {
